--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -93,7 +93,7 @@ import { Picture } from "astro:assets";
 
   <!-- Футер -->
   <footer class=" text-gray-400 text-center p-4">
-    Все права <a class="hover:text-blue-400" href="#"> защищены.</a> 
-    Исходный код - <a class="hover:text-amber-500" href="#"><i class="fa-brands fa-gitlab"></i></a>
+    Все права <a class="hover:text-blue-400" href="https://gitlab.zytro.su/waste3d/waste3dsite/-/blob/main/license"> защищены.</a> 
+    Исходный код - <a class="hover:text-amber-500" href="https://gitlab.zytro.su/waste3d/waste3dsite/"><i class="fa-brands fa-gitlab"></i></a>
   </footer>
 </div>
