--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -18,7 +18,6 @@ import { Picture } from "astro:assets";
         </div>
 
         <div class="flex flex-col md:flex-row gap-4 w-full max-w-screen">
-          <!-- Контакты -->
           <div class="flex-1 flex flex-col items-center">
             <p class="text-xl font-medium text-white mb-2">Контакты</p>
             <div class="flex flex-wrap items-center justify-center gap-2 sm:flex-row">
@@ -43,7 +42,6 @@ import { Picture } from "astro:assets";
             </div>
           </div>
 
-          <!-- Навыки -->
           <div class="flex-1 flex flex-col items-center">
             <p class="text-xl font-medium text-white mb-2">Навыки</p>
             <div class="flex flex-wrap items-center justify-center gap-2 sm:flex-row">
@@ -83,6 +81,12 @@ import { Picture } from "astro:assets";
                   SQL/NoSQL
                 </span>
               </div>
+              <div class="bg-zinc-900 p-2 border-2 border-gray-700 rounded-md flex items-center">
+                <span class="flex flex-row items-center gap-1">
+                  <i class="fa-solid fa-server"></i>
+                  Nginx
+                </span>
+              </div>
             </div>
           </div>
         </div>
@@ -91,7 +95,7 @@ import { Picture } from "astro:assets";
     </div>
   </main>
 
-  <!-- Футер -->
+
   <footer class=" text-gray-400 text-center p-4">
     Все права <a class="hover:text-blue-400" href="https://gitlab.zytro.su/waste3d/waste3dsite/-/blob/main/license"> защищены.</a> 
     Исходный код - <a class="hover:text-amber-500" href="https://gitlab.zytro.su/waste3d/waste3dsite/"><i class="fa-brands fa-gitlab"></i></a>
