--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -97,7 +97,7 @@ import { Picture } from "astro:assets";
 
 
   <footer class=" text-gray-400 text-center p-4">
-    Made w/ <a class="hover:text-purple-400" href="#">astro</a>. 
+    Made w/ <a class="hover:text-purple-400" href="https://astro.build">astro</a>. 
     Все права <a class="hover:text-blue-400" href="https://gitlab.zytro.su/waste3d/waste3dsite/-/blob/main/license"> защищены.</a> 
     Исходный код - <a class="hover:text-amber-500" href="https://gitlab.zytro.su/waste3d/waste3dsite/"><i class="fa-brands fa-gitlab"></i></a>
   </footer>
