--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,6 +35,7 @@ const { title, lang } = Astro.props;
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
     <script src="https://static.arlcrow.site/fa/js/solid.min.js"></script>
     <script src="https://static.arlcrow.site/fa/js/brands.min.js"></script>
     <script src="https://static.arlcrow.site/fa/js/duotone.min.js"></script>
