--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,6 +2,7 @@
 import { Picture } from "astro:assets";
 ---
 <div class="min-h-screen flex flex-col">
+  <div id="tsparticles" class="fixed top-0 left-0 w-full h-full -z-10"></div>
   <main class="flex-grow flex items-center justify-center">
     <div class="about-me">
       <div class="flex flex-col gap-10 font-light p-4">
@@ -97,8 +98,38 @@ import { Picture } from "astro:assets";
 
 
   <footer class=" text-gray-400 text-center p-4">
-    Made w/ <a class="hover:text-purple-400" href="https://astro.build">astro</a>. 
-    Все права <a class="hover:text-blue-400" href="https://gitlab.zytro.su/waste3d/waste3dsite/-/blob/main/license"> защищены.</a> 
-    Исходный код - <a class="hover:text-amber-500" href="https://gitlab.zytro.su/waste3d/waste3dsite/"><i class="fa-brands fa-gitlab"></i></a>
+    Made w/ <a class="hover:text-purple-400 focus:text-purple-400" href="https://astro.build">astro</a>. 
+    Все права <a class="hover:text-blue-400 focus:text-blue-400" href="https://gitlab.zytro.su/waste3d/waste3dsite/-/blob/main/license"> защищены.</a> 
+    Исходный код - <a class="hover:text-amber-500 focus:text-amber-500" href="https://gitlab.zytro.su/waste3d/waste3dsite/"><i class="fa-brands fa-gitlab"></i></a>
   </footer>
 </div>
+
+<script>
+  window.addEventListener("load", () => {
+    tsParticles.load("tsparticles", {
+      fullScreen: { enable: false },
+      particles: {
+        number: { value: 80, density: { enable: true, area: 800 } },
+        color: { value: "#888" },
+        shape: { type: "circle" },
+        opacity: { value: 0.5 },
+        size: { value: 3 },
+        move: { enable: true, speed: 1 },
+        line_linked: {  // Этот параметр больше не работает в v2
+          enable: false
+        },
+        links: {
+          enable: true,
+          distance: 150,
+          color: "#888",
+          opacity: 0.6,
+          width: 1
+        }
+      },
+      background: {
+        color: "#0f0f0f"
+      }
+    });
+  });
+</script>
+
