--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,5 +1,6 @@
 ---
 import { Picture } from "astro:assets";
+import ProjectList from "./ProjectList";
 ---
 <div class="min-h-screen flex flex-col">
   <div id="tsparticles" class="fixed top-0 left-0 w-full h-full -z-10"></div>
@@ -79,7 +80,7 @@ import { Picture } from "astro:assets";
               <div class="bg-zinc-900 p-2 border-2 border-gray-700 rounded-md flex items-center">
                 <span class="flex flex-row items-center gap-1">
                   <i class="fa-solid fa-database text-green-400"></i>
-                  SQL/NoSQL
+                  SQL
                 </span>
               </div>
               <div class="bg-zinc-900 p-2 border-2 border-gray-700 rounded-md flex items-center">
@@ -92,15 +93,31 @@ import { Picture } from "astro:assets";
           </div>
         </div>
 
+        <div class="flex flex-col items-center ">
+          <p class="text-xl font-medium text-white mb-2">Портфолио</p>
+            <div class="p-4 border-2 border-gray-700 rounded-md w-full max-w-screen-md bg-zinc-900/30 backdrop-blur-xs">
+           <p class="text-2xl font-medium text-purple-400 mb-2"> <i class="fa-solid fa-server"></i> Собственная IT-инфраструктура:</p>
+           <p class="text-gray-400 text-sm mb-2">≈ Q2 2024 - н.в.</p>
+           <p class="mb-2 font-bold">Настроил несколько серверов, включая: </p>
+            <ul class="list-disc list-inside ">
+              <p><i class="fa-solid fa-network-wired text-purple-400"></i> Серверы на базе Linux (Debian, Ubuntu)</p>
+              <p><i class="fa-brands fa-docker text-purple-400"></i> Контейнеризация с использованием Docker Compose</p>
+              <p> <i class="fa-solid fa-gears text-purple-400"></i> Автоматизация с Ansible</p>
+              <p><i class="fa-solid fa-globe text-purple text-purple-400"></i> Веб-серверы и проксирование на Nginx</p>
+              <p><i class="fa-solid fa-desktop text-purple-400"></i> Мониторинг с использованием Prometheus и Grafana</p>
+            </ul>
+           <section>
+            <ProjectList client:load/>
+           </section>
+
       </div>
     </div>
   </main>
 
-
   <footer class=" text-gray-400 text-center p-4">
     Made w/ <a class="hover:text-purple-400 focus:text-purple-400" href="https://astro.build">astro</a>. 
     Все права <a class="hover:text-blue-400 focus:text-blue-400" href="https://github.com/waste3d/website/blob/main/license"> защищены.</a> 
-    Исходный код - <a class="hover:text-amber-500 focus:text-amber-500" href="https://github.com/waste3d/website"><i class="fa-brands fa-gitlab"></i></a>
+    Исходный код - <a class="hover:text-white focus:text-white" href="https://github.com/waste3d/website"><i class="fa-brands fa-github"></i></a>
   </footer>
 </div>
 
@@ -131,11 +148,11 @@ import { Picture } from "astro:assets";
         events: {
           onHover: {
             enable: true,
-            mode: "repulse" // или "grab", "bubble"
+            mode: "repulse"
           },
           onClick: {
             enable: true,
-            mode: "push" // добавление новых частиц
+            mode: "push"
           },
           resize: true
         },
